[package]
name = "fpj"
version = "0.1.0"
edition = "2021"
description = "File Projector — application-agnostic tool for creating and managing flexible filesystem views"
repository = "https://github.com/PavingLayer/fpj"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
dirs = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["mount", "fs", "user"] }

[target.'cfg(target_os = "windows")'.dependencies]
winfsp = { version = "0.5", optional = true }
windows-projfs = { version = "0.1", optional = true }

[features]
default = []
winfsp-backend = ["winfsp"]
projfs-backend = ["windows-projfs"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
