[package]
name = "fpj"
version = "0.1.0"
edition = "2021"
description = "File Projector — application-agnostic tool for creating and managing flexible filesystem views"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PavingLayer/fpj"
homepage = "https://pavinglayer.github.io/fpj"
documentation = "https://docs.rs/fpj"
keywords = ["overlay", "filesystem", "mount", "layers", "bind-mount"]
categories = ["filesystem", "command-line-utilities"]
exclude = ["docs/", ".github/", "tests/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
dirs = "6"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["mount", "fs", "user"] }

[target.'cfg(target_os = "windows")'.dependencies]
winfsp = "0.12"
widestring = "1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
